--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
 </head>
 <body>
     <header>
-      <h1>My Work</h1>
+      <h1>
+        <a href="#">My Work</a>
+      </h1>
       <div class=container>
-        <p>About</p>
-        <p>Works</p>
-        <p>News</p>
-        <p>Contact</p>
-        <img src="icon-instagram.png" width="20" height="20">
+        <p class="a1">
+          <a href="#about">About</a>
+        </p>
+        <p class="a2">
+          <a href="#works">Works</a>
+        </p>
+        <p class="a3">
+          <a href="#news">News</a>
+        </p>
+        <p class="a4">
+          <a href="#contact">Contact</a>
+        </p>
+        <a href="#" class="insta" target="_blank">
+          <img src="icon-instagram.png" width="20" height="20">
+        </a>
       </div>
     </header>
 
@@ -23,7 +35,7 @@
       <img src="mainvisual-pc.jpg">
     </div>
 
-    <section class="about">
+    <section class="about" id="about">
       <h2>About</h2>
       <p>
         Xーーーxx Ashley
@@ -39,7 +51,7 @@
       </p>
     </section>
 
-    <section class="works">
+    <section class="works" id="works">
       <h2>Works</h2>
       <div class="images">
         <img src="works1.jpg">
@@ -51,20 +63,20 @@
       </div>
     </section>
 
-    <section>
+    <section id="news">
       <h2>News</h2>
-      <table border="2">
+      <table>
         <tbody>
-          <tr><td>2020.XX.XX</td><td>デザイン雑誌ーーーーーに掲載していただきました。</td></tr>
-          <tr><td>2020.XX.XX</td><td>ＸＸ月ＸＸ日から写真集ーーーーーーーーの販売を開始します。</td></tr>
-          <tr><td>2019.XX.XX</td><td>【イベント開催のお知らせ】 テキストテキストテキストテキストテキストテキストテキスト</td></tr>
-          <tr><td>2019.XX.XX</td><td>デザイン雑誌ーーーーーに掲載していただきました。</td></tr>
-          <tr><td>2019.XX.XX</td><td>【個展開催のお知らせ】テキストテキストテキストテキストテキストテキストテキスト</td></tr>
+          <tr><td class="date">2020.XX.XX</td><td class="note">デザイン雑誌ーーーーーに掲載していただきました。</td></tr>
+          <tr><td class="date">2020.XX.XX</td><td class="note">ＸＸ月ＸＸ日から写真集ーーーーーーーーの販売を開始します。</td></tr>
+          <tr><td class="date">2019.XX.XX</td><td class="note">【イベント開催のお知らせ】 テキストテキストテキストテキストテキストテキストテキスト</td></tr>
+          <tr><td class="date">2019.XX.XX</td><td class="note">デザイン雑誌ーーーーーに掲載していただきました。</td></tr>
+          <tr><td class="date">2019.XX.XX</td><td class="note">【個展開催のお知らせ】テキストテキストテキストテキストテキストテキストテキスト</td></tr>
         </tbody>
       </table>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
       <h2>Contact</h2>
       <form class="contact-form">
         <div class="contacts">
